fixed issue from David with awards layout on Iphone SE

--- a/public/css/_typography.scss
+++ b/public/css/_typography.scss
@@ -123,3 +123,10 @@ footer ul{
     }
   }
 }
+
+.col-xss-12  {
+  @include max-screen($xss-screen) {
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+  }
+}
