--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -8,6 +8,8 @@ $light-blue-color: #E5F7FF;
 $gray-light-color: #BDBDBD;
 $gray-color: #8F8D9A;
 $black-dark-color: #284458;
+
+$xss-screen: 320px;
 $sm-screen: 576px;
 $lg-screen: 992px;
 $xl-screen: 1200px;
